--- a/watchlist.html
+++ b/watchlist.html
@@ -372,6 +372,6 @@
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		<script src="js/jquery.dataTables.min.js"></script>
-		<script src="js/jquery.dataTables.min.js"></script>
+		<script src="js/watchlist.js"></script>
 	</body>
 </html>
